# WinApiDemo

./: .gitignore  CMakeLists.txt  README.md  RPC_README.md  Resource.h  Timesvc.acf  Timesvc.h  Timesvc.idl  Timesvc_c.c  Timesvc_s.c  WinApiDemo.cpp  WinApiDemo.rc  WinApiDemo.slnx  WinApiDemo.vcxproj  WinApiDemo.vcxproj.filters  capture.wmf  time.c
ice/: README.md  Time.ice  client.cpp  server.cpp
